moodledb-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodledb-exporter-deployment
  labels:
    app: moodledb-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodledb-exporter
  template:
    metadata:
      labels:
        app: moodledb-exporter
    spec:
      containers:
      - name: moodledb-exporter
        image: git.atcomputing.nl:5050/training/infra/moodledb-exporter:latest
        ports:
        - containerPort: 8899
      restartPolicy: UnlessStopped

---

apiVersion: v1
kind: Service
metadata:
  name: moodledb-exporter-service
spec:
  selector:
    app: moodledb-exporter
  ports:
  - protocol: TCP
    port: 8899
    targetPort: 8899
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodledb-exporter-ingress
  annotations:
    # Include any specific annotations for your ingress controller, if required.
spec:
  rules:
  - http:
      paths:
      - path: /moodledb-exporter
        pathType: Prefix
        backend:
          service:
            name: moodledb-exporter-service
            port:
              number: 8899
